# coupe

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  TODOS.md  Taskfile.yml  rustfmt.toml
caddy/: Dockerfile  go.mod  go.sum  main.go
cli/: README.md  bun.lockb  commands.ts  config.ts  constants.ts  index.ts  nats.ts  package-lock.json  package.json  tsconfig.json  utils.ts
cli/commands/: add.ts  deploy.ts  index.ts  init.ts  scaffold.ts  teardown.ts
coupe/: Cargo.toml
coupe-cli/: Cargo.toml
coupe-cli/src/: cli.rs  error.rs  lib.rs  main.rs
coupe-cli/src/commands/: deploy.rs  mod.rs  new.rs  teardown.rs
coupe-config/: Cargo.toml
coupe-config/src/: lib.rs
coupe-sentinel/: Cargo.toml  Dockerfile
coupe-sentinel/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  sessions.rs
coupe/src/: config.rs  config_target.rs  deployment.rs  deployment_target.rs  docker.rs  error.rs  fluentbit.rs  lib.rs
example/: coupe.yaml
example/blog/: .dockerignore  Dockerfile  astro.config.mjs  package.json  server.js  stats.json  tsconfig.json
example/blog/src/components/: BlogCard.svelte  BlogSearch.svelte
example/blog/src/content/: config.ts
example/blog/src/content/posts/: lorem-ipsum-dolor.md  sed-ut-perspiciatis.md
example/blog/src/layouts/: Layout.astro
example/blog/src/pages/: index.astro  ssr.astro
example/blog/src/pages/posts/: [slug].astro
examples/hello_world/: coupe.yaml
examples/hello_world/bonjour/: Cargo.toml
examples/hello_world/ciao/src/: lib.rs
examples/hello_world/functions/hello/: Cargo.toml
examples/hello_world/functions/hola/: package-lock.json
examples/hello_world/hello/src/: lib.rs
platform/consumer-function-waker/: Cargo.toml  Dockerfile
platform/consumer-function-waker/src/: main.rs
platform/sentinel/: Cargo.toml  Dockerfile
platform/sentinel/src/: api.rs  config.rs  containers.rs
sentinel/: .Dockerignore  Cargo.toml  Dockerfile  coupe.yaml
sentinel/src/: api.rs  config.rs  containers.rs  db.rs  error.rs  main.rs  nats.rs  sessions.rs
templates/: Cargo.toml
templates/functions/rust/http/: .dockerignore  Cargo.toml  Dockerfile
templates/functions/rust/http/handler/src/: lib.rs
templates/functions/rust/http/trigger/: Cargo.toml
templates/functions/rust/http/trigger/src/: main.rs
templates/functions/rust/pubsub/: Dockerfile
templates/functions/rust/pubsub/handler/src/: lib.rs
templates/functions/rust/pubsub/trigger/src/: main.rs
templates/functions/rust/queue/: Cargo.toml
templates/functions/rust/queue/trigger/: Cargo.toml
templates/functions/rust/queue/trigger/src/: main.rs
templates/functions/rust/stream/: .Dockerignore  Dockerfile  packages
templates/functions/typescript-node/http/: Dockerfile  README.md  packages
templates/functions/typescript-node/http/handler/: package.json
templates/functions/typescript-node/http/handler/src/: index.ts
templates/functions/typescript-node/http/trigger/: README.md  package-lock.json  package.json
templates/functions/typescript-node/http/trigger/src/: index.ts
