[package]
name = "coupe-sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4", features = ["derive"] }
coupe = { path = "../coupe" }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
tracing = "0.1.41"
mimalloc = "0.1.47"
serde_json = "1.0.140"
