[package]
name = "coupe-sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4", features = ["derive"] }
coupe = { path = "../coupe" }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
mimalloc = "0.1.47"
serde_json = "1.0.140"
fjall = "2.11.1"
bincode = "1.3.3"
serde = "1.0.219"
jiff = "0.2.15"
futures = "0.3.31"
axum-proxy = "0.5.1"
tower-service = "0.3.3"
reqwest = "0.12.22"
dashmap = "6.1.0"
