[package]
name = "coupe"
version = "0.1.0"
edition = "2024"

[dependencies]
openapi = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
serde_yaml = "0.9"
serde_json = "1.0.140"
bollard = { version = "0.19.1", features = ["ssh"] }
tokio = { version = "1.45.1", features = ["full"] }
remotefs = "0.3.1"
remotefs-ssh = "0.6.2"
