[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-nats = "0.38.0"
axum = "0.7.9"
axum-tracing-opentelemetry = "0.24.1"
bincode = "1.3.3"
bollard = "0.18.1"
clap = { version = "4.5.21", features = ["derive"] }
config = "0.14.1"
coupe-lib = { path = "../templates/packages/rust/coupe-lib" }
futures = "0.3.31"
jiff = "0.1.14"
mimalloc = "0.1.43"
once_cell = "1.20.2"
opentelemetry = "0.27.0"
serde = "1.0.215"
serde_json = "1.0.133"
sled = "0.34.7"
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
