[package]
name = "consumer-function-waker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.37.0"
futures = "0.3.30"
anyhow = "1.0.89"
serde = "1.0.213"
serde_json = "1.0.132"
reqwest = "0.12.8"
