[package]
name = "trigger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
handler = { path = "../handler" }
coupe-lib = { path = "../packages/coupe-lib" }
tracing = "0.1.40"
opentelemetry = "0.27.0"
anyhow = "1.0.93"
opentelemetry-semantic-conventions = "0.27.0"
