[package]
name = "trigger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
handler = { path = "../handler" }
async-nats = "0.36.0"
futures = "0.3.30"
anyhow = "1.0.89"
